# nyar-vm

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Readme.md  package.json
projects/nyar-error/: Cargo.toml
projects/nyar-error/src/: lib.rs
projects/nyar-error/src/duplicates/: kind.rs  mod.rs
projects/nyar-error/src/errors/: convert.rs  display.rs  error_kinds.rs  internal_error.rs  mod.rs  native_wrap.rs  parse_errors.rs
projects/nyar-error/src/levels/: mod.rs
projects/nyar-error/src/managers/: mod.rs
projects/nyar-error/src/parsing/: for_dashu.rs  for_json5.rs  for_number.rs  for_peginator.rs  for_pratt.rs  for_toml.rs  for_ygg.rs  mod.rs
projects/nyar-error/src/runtime/: for_serde.rs  for_walkdir.rs  for_wasm.rs  mod.rs
projects/nyar-error/src/span/: mod.rs
projects/nyar-error/src/undefined/: mod.rs
projects/nyar-hir/: Cargo.toml  readme.md
projects/nyar-hir/src/: lib.rs
projects/nyar-hir/src/ast/: checking.rs  display.rs  mod.rs
projects/nyar-hir/src/control_flow/: Readme.md  mod.rs  pure_loop.rs  switch_table.rs
projects/nyar-hir/src/cps/: mod.rs
projects/nyar-hir/src/csr/: cps_if.vk  cps_loop.vk  cps_loop_loop.vk  cps_while.vk  cps_yield_if.vk  cps_yield_loop.vk  csr_for_iter.vk  mod.rs
projects/nyar-hir/src/diagnostics/: mod.rs
projects/nyar-hir/src/directory/: mod.rs
projects/nyar-hir/src/expression_level/: mod.rs  readme.md
projects/nyar-hir/src/files/: mod.rs
projects/nyar-hir/src/functions/: externals.rs  mod.rs
projects/nyar-hir/src/helpers/: mod.rs
projects/nyar-hir/src/jars/: mod.rs
projects/nyar-hir/src/parser/: mod.rs
projects/nyar-hir/src/structures/: mod.rs
projects/nyar-hir/src/symbols/: convert.rs  display.rs  mod.rs
projects/nyar-hir/src/types/: mod.rs
projects/nyar-hir/src/utils/: mod.rs
projects/nyar-hir/src/values/: mod.rs
projects/nyar-hir/tests/: main.rs
projects/nyar-runtime/: Cargo.toml
projects/nyar-runtime/src/: lib.rs  readme.md
projects/nyar-runtime/src/host/: mod.rs
projects/nyar-runtime/tests/: component.wat  main.rs  module.wat
projects/nyar-runtime/wit/: world.wit
projects/nyar-value/: Cargo.toml
projects/nyar-value/src/: lib.rs
projects/nyar-value/src/modifiers/: mod.rs
projects/nyar-value/src/nyar_class/: mod.rs  variants.rs
projects/nyar-value/src/nyar_function/: mod.rs
projects/nyar-value/src/nyar_primitive/: mod.rs  variants.rs
projects/nyar-value/src/nyar_variants/: mod.rs
projects/nyar-value/src/traits/: mod.rs
projects/nyar-value/src/values/: mod.rs
projects/nyar-value/tests/: main.rs
projects/nyar-wasm/: Cargo.toml  Readme.md  package.json  readme.md  run.mjs
projects/nyar-wasm/src/: lib.rs  readme.md
projects/nyar-wasm/src/array/: codegen.rs  mod.rs
projects/nyar-wasm/src/builder/: mod.rs
projects/nyar-wasm/src/dag/: arithmetic.rs  mod.rs
projects/nyar-wasm/src/data/: mod.rs
projects/nyar-wasm/src/encoder/: for_instance.rs  mod.rs
projects/nyar-wasm/src/enumerates/: codegen.rs  mod.rs
projects/nyar-wasm/src/flags/: codegen.rs  mod.rs
projects/nyar-wasm/src/functions/: codegen.rs  mod.rs  operations.rs
projects/nyar-wasm/src/globals/: iters.rs  mod.rs
projects/nyar-wasm/src/helpers/: mod.rs
projects/nyar-wasm/src/instances/: display.rs  mod.rs
projects/nyar-wasm/src/modules/: defs.rs  interface.rs  mod.rs  printable.rs  verify.rs  wast_component.rs  wast_module.rs
projects/nyar-wasm/src/operations/: branch.rs  codegen.rs  convert.rs  mod.rs  types.rs
projects/nyar-wasm/src/runner/: mod.rs
projects/nyar-wasm/src/structures/: codegen.rs  convert.rs  mod.rs
projects/nyar-wasm/src/symbols/: codegen.rs  convert.rs  display.rs  exports.rs  imports.rs  mod.rs
projects/nyar-wasm/src/tags/: mod.rs
projects/nyar-wasm/src/types/: array.rs  codegen.rs  defs.rs  external.rs  functional.rs  interface.rs  mod.rs  printable.rs  structure.rs  verify.rs
projects/nyar-wasm/src/values/: convert.rs  data.rs  global.rs  mod.rs  variable.rs
projects/nyar-wasm/src/variants/: codegen.rs  mod.rs
projects/nyar-wasm/src/wasi_types/: display.rs  mod.rs
projects/nyar-wasm/src/wasi_values/: arithmetic.rs  mod.rs
projects/nyar-wasm/tests/: Array.vk  Compare.vk  adt_examples.rs  cf_examples.rs  debug.wat  hello-world.vk  hello-world.wat  index.html  io_examples.rs  main.rs  readme.md  runtime-debug.wat  runtime-release.wat  step1.wat  step2.wat  test.wat  tuples.wat  tuples.wit  u128.vk
projects/source-cache/: Cargo.toml
projects/valkyrie-ast/: Cargo.toml
projects/valkyrie-ast/src/: display.rs  lib.rs
projects/valkyrie-ast/src/control_flow/: for_loop.rs  match_case.rs  mod.rs  pattern.rs  which_case.rs  while_loop.rs
projects/valkyrie-ast/src/expression_level/: atomic.rs  binary.rs  decimal.rs  identifier.rs  integer.rs  list.rs  mod.rs  string.rs  unary.rs
projects/valkyrie-ast/src/operators/: mod.rs  resolver.rs
projects/valkyrie-ast/tests/: main.rs
projects/valkyrie-language-server/: Cargo.toml
projects/valkyrie-language-server/src/: lib.rs  main.rs
projects/valkyrie-macro/: Cargo.toml
projects/valkyrie-macro/src/: lib.rs
projects/valkyrie-parser/: Cargo.toml  Readme.md  valkyrie.peg  valkyrie.pest
projects/valkyrie-parser/src/: lib.rs  testing.rs  traits.rs
projects/valkyrie-parser/tests/: basic.vk  leetcode.md  main.rs  yield.vk
projects/valkyrie-std-io/: Cargo.toml
projects/valkyrie-std-io/src/: lib.rs
projects/valkyrie-workspace/: Cargo.toml
projects/valkyrie-workspace/src/: lib.rs
projects/wasm-interpreter/: Cargo.toml
projects/wasm-interpreter/src/: component.wat  hello-world.wat  main.rs  module.wat  random.wat  readme.md
projects/wasm-interpreter/tests/: component.wat  hello-world.vk  hello-world.wat  main.rs  module.wat  random-bytes.wat  random.wat
projects/wasm-interpreter/wit/: world.wit
projects/wast-encoder/: Cargo.toml
projects/wast-encoder/src/: component.wat  enumerations.rs  hello-world.wat  lib.rs  random-bytes.wat  readme.md
projects/wast-encoder/tests/: LinkedList.vk  hello-world.wat  main.rs
projects/wast-encoder/wit/: json5.wit
(+372 files in other folders)
