[package]
name = "nyar-number"
version = "0.0.6"
authors = ["aster <aster@mugen.vip>"]
description = "Number Lib for Nyar"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-number"
exclude = ["/tests/*", "/.idea/*"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib"]
name = "number"
path = "src/lib.rs"


[dependencies]
bigdecimal = "0.1.0"
serde_json = "1.0.40"
rand = "0.7.0"
gc = {version = "0.3.3", optional = true}
num = {version = "0.2", default-features = true}