[package]
name = "nyar-number"
version = "0.2.4"
authors = ["aster <aster@mugen.vip>"]
description = "Number lib for Nyar"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-number"
exclude = ["/tests/*", "/.idea/*"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib"]
name = "number"
path = "src/lib.rs"

[features]
default = ["serde_json"]

[dependencies]
bigdecimal = "0.1.0"
rand = {version ="0.7.0", optional = true}
serde_json = {version ="1.0.40", optional = true}
gc = {version = "0.3.3", optional = true}
num = {version = "0.2", default-features = true}