[workspace]

members = ["projects/*"]
default-members = [
    "projects/nyar-hir",
    "projects/nyar-mir",
    "projects/nyar-error",
    "projects/nyar-interpreter",
    "projects/valkyrie-parser",
]
exclude = [
    "projects/nyar-value",
    "projects/nyar-macro",
]

[profile.release]
lto = true
opt-level = "s"