[package]
name = "nyar-error"
version = "0.1.2"
authors = ["192607617@qq.com"]
edition = "2021"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
url = "2.3.1"
diagnostic = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
num = { version = "0.4.0", features = ["serde"], optional = true }
bigdecimal = { version = "0.3.0", features = ["serde"], optional = true }
pest = { version = "2.5.2", optional = true }
shredder = { version = "0.2.0", optional = true }
peginator = { version = "0.6.0", optional = true }
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"

[dev-dependencies]

[features]
default = ["num", "bigdecimal"]
