[package]
name = "nyar-error"
version = "0.1.5"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/nyar-vm/tree/dev/projects/nyar-error"
documentation = "https://docs.rs/nyar-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
indexmap = "2.0.2"
convert_case = "0.6.0"
itertools = "0.11.0"
url = "2.4.1"
# parser
peginator = { version = "0.6.0", optional = true }
pratt = { version = "0.4.0", optional = true }
num = { version = "0.4.1", optional = true, features = ["serde"] }
dashu = { version = "0.4.0", optional = true, features = ["serde"] }
toml = { version = "0.8.2", optional = true}
json5 = { version = "0.4.1", optional = true}

[dependencies.diagnostic]
version = "0.5.2"
path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\diagnostic'


[dev-dependencies]

[features]
default = []
