[package]
name = "nyar-error"
version = "0.1.17"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/nyar-vm/tree/dev/projects/nyar-error"
documentation = "https://docs.rs/nyar-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
indexmap = "2.2.6"
convert_case = "0.6.0"
itertools = "0.13.0"
url = "2.5.0"
# parser
peginator = { version = "0.7.0", optional = true }
pratt = { version = "0.4.0", optional = true }
# number
num = { version = "0.4.3", optional = true, features = ["serde"] }
bigdecimal = { version = "0.4.3", optional = true, features = ["serde"] }
dashu = { version = "0.4.2", optional = true, features = ["serde"] }
# config
serde_json = { version = "1.0.117", optional = true }
json5 = { version = "0.4.1", optional = true }
toml = { version = "0.8.13", optional = true }

# io
walkdir = { version = "2.5.0", optional = true }

# runtime
wasmtime = { version = "24.0.0", optional = true }

[dependencies.yggdrasil-rt]
version = "0.1.3"
optional = true
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'


[dependencies.diagnostic]
version = "0.6.4"
#path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\diagnostic'
features = ["serde"]

[dependencies.validatus]
version = "0.0.6"
#path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\validation'


[dev-dependencies]

[features]
json5 = ["dep:json5", "serde_json"]
default = []
