[package]
name = "valkyrie-ast"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Abstract Syntax Tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
melior = "0.13.0"

[dev-dependencies]


[features]
default = []
