[package]
name = "nyar-hir"
version = "0.2.3"
authors = ["Aster <192607617@qq.com>"]
description = "Abstract Syntax Tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/nyar-hir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#wasmtime = { version = "15.0.1", optional = true }
#wasmtime-runtime = { version = "15.0.1", optional = true }
indexmap = "2.1.0"


[dependencies.nyar-error]
version = "0.1.*"
path = "../nyar-error"


[dev-dependencies]


[features]
default = []
#wasm = ["wasmtime", "wasmtime-runtime"]
