[package]
name = "nyar-hir"
version = "0.2.4"
authors = ["Aster <192607617@qq.com>"]
description = "Abstract Syntax Tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/nyar-hir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
wasmtime = { version = "28.0.0", optional = true }
wasmtime-runtime = { version = "20.0.2", optional = true }
indexmap = "2.7.0"

[dependencies.nyar-error]
version = "0.1.*"
path = "../nyar-error"


[dev-dependencies]


[features]
default = []
#wasm = ["wasmtime", "wasmtime-runtime"]
