[package]
name = "nyar-runtime"
version = "0.0.2"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
description = "nyar customized wasi runtime"
repository = "https://github.com/oovm/vcc"
documentation = "https://docs.rs/wast-encoder"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0"
wat = "1.201.0"

[dependencies.wasmtime-wasi]
version = "18.0.0"
features = []

[dependencies.wasmtime]
version = "18.0.0"
features = ["component-model", "async"]



[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }