[package]
name = "nyar-value"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/nyar-vm/nyar-vm"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
bitflags = "1.3.2"

[dependencies.nyar-error]
path = "../nyar-error"
version = "0.1.*"

[dev-dependencies]


[features]
default = []
