[package]
name = "nyar-value"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/nyar-vm/nyar-vm"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
bitflags = "1.3.2"
smartstring = "1.0.1"
num = "0.4.0"
rkyv = "0.7.38"
rkyv_derive = "0.7.38"
gc = "0.4.1"
gc_derive = "0.4.1"
indexmap = { version = "1.9.1", feature = ["serde"] }

[dependencies.nyar-error]
path = "../nyar-error"
version = "0.1.*"

[dev-dependencies]


[features]
default = []
