[package]
name = "nyar-wasm"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "High level wasm builder"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/nyar-wasm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
indexmap = "2.2.3"
wast = "200.0.0"

[dependencies.nyar-error]
version = "0.1.*"
path = "../nyar-error"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
