[package]
name = "nyar-wasm"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "High level wasm builder"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/nyar-wasm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
semver = "1.0.22"
indexmap = "2.2.3"
wast = "201.0.0"
string-pool = "0.2.1"
itertools = "0.12.1"
convert_case = "0.6.0"
dependent_sort = "0.2.0"

[dependencies.nyar-error]
version = "0.1.*"
path = "../nyar-error"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
