[package]
name = "valkyrie-language-server"
version = "0.2.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[[bin]]
name = "vls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
url = "2.3.1"
axum = { version = "0.6.1" }
reqwest = { version = "0.11", features = ["json"] }

[dependencies.nyar-error]
#version = "0.1.2"
path = "../nyar-error"


[dev-dependencies]

[build-dependencies]
