[package]
name = "valkyrie-language-server"
version = "0.2.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[[bin]]
name = "vls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
axum = { version = "0.6.1", features = [] }
axum-macros = "0.3.0"
tower = "0.4.13"
#reqwest = { version = "0.11", features = ["json"] }

[dependencies.nyar-error]
#version = "0.1.3"
path = "../nyar-error"


[dependencies.valkyrie-parser]
#version = "0.1.3"
path = "../valkyrie-parser"


[dev-dependencies]

[build-dependencies]
