[package]
name = "valkyrie-parser"
version = "0.2.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
pest = "2.2.1"
pest_derive = "2.2.1"

[dependencies.nyar-error]
path = "../nyar-error"
version = "0.1"
features = ["pest"]

[dependencies.nyar-hir]
path = "../nyar-hir"
version = "0.2"

[dev-dependencies]


[build-dependencies]
