[package]
name = "valkyrie-std-io"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
inwelling = "0.5.5"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]

[features]
default = []
