[package]
name = "nyar-runtime"
version = "0.0.2"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
description = "WAST encoder supporting wasi and wit components"
repository = "https://github.com/oovm/vcc"
documentation = "https://docs.rs/wast-encoder"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0"
wasmtime = { version = "18.0.1", features = ["component-model", "async"] }
wasmtime-wasi = { version = "18.0.1", features = ["tokio", ] }
