[package]
name = "vcc-runner"
version = "0.0.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/oovm/vcc"
documentation = "https://docs.rs/vcc-runner"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
string-pool = "0.1.0"
semver = "1.0.22"


[dev-dependencies]
wasm-parser = "0.1.22"
#tokio = { version = "1.36.0", features = ["macros"] }

[features]
wast = []
