[package]
name = "wast-encoder"
version = "0.0.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
description = "WAST encoder supporting wasi and wit components"
repository = "https://github.com/oovm/vcc"
documentation = "https://docs.rs/wast-encoder"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
string-pool = "0.1.0"
semver = "1.0.22"
indexmap = "2.2.3"

[dev-dependencies]
wasm-parser = "0.1.22"
#tokio = { version = "1.36.0", features = ["macros"] }

[features]
wast = []
